# fuel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml  requirements-dev.txt  rustfmt.toml
.github/workflows/: build-wheels.sh  wheels.yml
benches/: math.rs  pairwise_sqdist.rs
benchmark/: agnes.rs  aknn_benchmark.rs  baseline.rs  common.rs  counting_distance.rs  counting_euclidean_distance.rs  counting_partial_distance.rs  data_loading.rs  dbscan.rs  geometric_linkage.rs  hdbscan.rs  index_benchmark.rs  kd_vs_vp.rs  knn.rs  lof.rs  loop.rs  optics.rs  single_link.rs
comparison/: file_loader.py  scipy_agnes_benchmark.py  sklearn_dbscan_benchmark.py  sklearn_knn_benchmark.py  sklearn_lof_benchmark.py  sklearn_optics_benchmark.py
data/hierarchical/: README.md  balanced_gaussians.csv  mixed_density_ellipses.csv  nested_clusters.csv
doc/: python.md
examples/: dbscan_hdbscan.py  hierarchical_clustering.py  kmeans_mnist_runtime.py  kmedoids_clustering.py  knn_search_runtime.py  outlier_detection.py  range_search_runtime.py
python/: dbscan.rs  em.rs  evaluation.rs  hdbscan.rs  hierarchical.rs  kmeans.rs  kmedoids.rs  mod.rs  outlier.rs  search.rs  sparse.rs  spherical.rs
python/fuel/: __init__.py  _dispatch.py  search.py
python/fuel/cluster/: __init__.py  _dbscan.py  _em.py  _hdbscan.py  _hierarchical.py  _kmeans.py  _kmedoids.py
python/fuel/cluster/evaluation/: __init__.py
python/fuel/evaluation/: __init__.py  _cluster.py  _outlier.py
python/fuel/evaluation/cluster/: __init__.py
python/fuel/evaluation/outlier/: __init__.py
python/fuel/outlier/: __init__.py
python/fuel/outlier/evaluation/: __init__.py
scripts/: generate_hac_test_data.py
src/: api.rs  distance_matrix.rs  matrix_data_access.rs  mod.rs  test.rs
src/api/: condensed_distance_matrix.rs  data.rs  distance_matrix.rs  float.rs  mod.rs  ndarray.rs  parallel.rs  query.rs  search.rs  square_distance_matrix.rs  tabular.rs
src/cluster/: dbscan.rs  kmedoids.rs  mod.rs  optics.rs  parallel_dbscan.rs
src/cluster/em/: mod.rs  optimizer.rs
src/cluster/em/models/: common.rs  diagonal.rs  (+10 more)
src/cluster/hdbscan/: boruvka_searchers_hdbscan.rs  buffered_search_hdbscan.rs  extraction.rs  hdbscan_common.rs  hdbscan_prim.rs  heap_of_searchers_hdbscan.rs  lazy_buffered_search_hdbscan.rs  mod.rs  restarting_search_hdbscan.rs  slink_hdbscan.rs
src/cluster/hierarchical/: agnes.rs  anderberg.rs  boruvka_searchers_hdbscan.rs  boruvka_searchers_single_link.rs  buffered_search_single_link.rs  clink.rs  common.rs  geometric_nn_chain.rs  hacam.rs  hausdorff.rs  hdbscan_common.rs  hdbscan_linear_memory.rs  heap_of_searchers_hdbscan.rs  heap_of_searchers_single_link.rs  incremental_nn_chain.rs  lazy_buffered_search_single_link.rs  linear_memory_nn_chain.rs  medoid_linkage.rs  merge_history.rs  minimax.rs  minimax_anderberg.rs  minimax_nn_chain.rs  mod.rs  muellner.rs  nn_cache.rs  nn_chain.rs  optics_to_hierarchical.rs  pointer.rs  regression.rs  regression_support.rs  restarting_search_hdbscan.rs  restarting_search_single_link.rs  search_single_link_common.rs  set_agnes.rs  set_anderberg.rs  set_muellner.rs  set_nn_chain.rs  slink.rs  slink_hdbscan_linear_memory.rs  test.rs  (+1 more)
src/cluster/kmeans/: adapter.rs  elkan.rs  exponion.rs  fuzzy_cmeans.rs  hamerly.rs  hartigan_wong.rs  kgeometric.rs  kgeometric_sh.rs  kgmedians.rs  kharmonic.rs  kmedians.rs  lloyd.rs  lloyd_blas.rs  lloyd_naive.rs  macqueen.rs  mod.rs  ndarray.rs  selkan.rs  shallot.rs  shamerly.rs  tkmeans.rs  util.rs
src/covertree/: aknn.rs  construct.rs  knn.rs  mod.rs  priority.rs  range.rs
src/covertree/tests/: covertree.rs  mod.rs
src/data/: distancematrix.rs  mod.rs  tabular.rs
src/distance/: binary.rs  braycurtis.rs  canberra.rs  chebyshev.rs  chi.rs  chi_squared.rs  clark.rs  cosine.rs  euclidean.rs  haversine.rs  hellinger.rs  histogram_intersection.rs  inner_product.rs  jeffrey.rs  jensen_shannon.rs  manhattan.rs  minkowski.rs  mod.rs  partial.rs  squared_euclidean.rs
src/evaluation/: mod.rs
src/evaluation/cluster/: cophenetic.rs  extractor.rs  internal.rs  mod.rs  pairsegments.rs
src/evaluation/outlier/: average_precision.rs  discounted_cumulative_gain.rs  maximum_f1.rs  mod.rs  precision_at_k.rs  precision_recall_curve.rs  precision_recall_gain.rs  receiver_operating_curve.rs
src/intrinsicdimensionality/: aggregated_hill_estimator.rs  alid_estimator.rs  angle_based_id.rs  generalized_expansion_dimension.rs  hill_estimator.rs  lmoments_estimator.rs  local_pca.rs  method_of_moments.rs  mod.rs  probability_weighted_moments.rs  probability_weighted_moments_2.rs  regularly_varying_id.rs  test.rs  tests.rs  tightlid_estimator.rs  zipf_estimator.rs
src/kd/: aknn.rs  construct.rs  knn.rs  mod.rs  priority.rs  range.rs  split.rs
src/kernel/: laplace.rs  linear.rs  mod.rs  polynomial.rs  rational_quadratic.rs  rbf.rs  sigmoid.rs
src/math/: avx2.rs  default.rs  mod.rs  scalar.rs  unroll.rs
src/outlier/: abod.rs  aloci.rs  baseline.rs  cof.rs  common.rs  cop.rs  db_outlier_detection.rs  db_outlier_score.rs  dwof.rs  fast_abod.rs  flexible_lof.rs  idos.rs  inflo.rs  isolation_forest.rs  isos.rs  kdeos.rs  kernel.rs  knn.rs  knndd.rs  knnsos.rs  lbabod.rs  ldf.rs  ldof.rs  lid.rs  local_isolation_coefficient.rs  loci.rs  lof.rs  loop.rs  mod.rs  odin.rs  simple_kd_lof.rs  simple_kernel_density_lof.rs  simplified_lof.rs  sod.rs  sos.rs  variance_of_volume.rs  weighted_knn.rs
src/search/: linear_scan.rs  mod.rs  precomputed.rs  proxy.rs
src/search/covertree/: aknn.rs  construct.rs  knn.rs  mod.rs  priority.rs  range.rs
src/search/kdtree/: aknn.rs  construct.rs  knn.rs  mod.rs  priority.rs  range.rs  split.rs
src/search/vptree/: aknn.rs  construct.rs  knn.rs  mod.rs  priority.rs  range.rs
src/statistics/: mod.rs  probability_weighted_moments.rs
src/vptree/: aknn.rs  construct.rs  knn.rs  knn_search.rs  mod.rs  priority_search.rs  range.rs  range_search.rs
src/vptree/tests/: construction.rs  knn.rs  mod.rs  priority.rs  range.rs  shared.rs
testdata/: make-reference.sh  reference-outlier-scores.csv
(+52 files in other folders)
