[package]
edition = "2024"
name = "fuel"
version = "0.1.0"
authors = ["Erich Schubert <erich.schubert@tu-dortmund.de>"]
autobins = false

[lib]
name = "fuel"
path = "src/mod.rs"
test = true

[[bin]]
name = "knn"
path = "benchmark/knn.rs"
required-features = ["benchmark"]

[[bin]]
name = "lof"
path = "benchmark/lof.rs"
required-features = ["benchmark"]

[[bin]]
name = "loop"
path = "benchmark/loop.rs"
required-features = ["benchmark"]

[[bin]]
name = "dbscan"
path = "benchmark/dbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "optics"
path = "benchmark/optics.rs"
required-features = ["benchmark"]

[[bin]]
name = "hdbscan"
path = "benchmark/hdbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "baseline"
path = "benchmark/baseline.rs"
required-features = ["benchmark"]

[[bin]]
name = "agnes"
path = "benchmark/agnes.rs"
required-features = ["benchmark"]

[[bin]]
name = "single_link"
path = "benchmark/single_link.rs"
required-features = ["benchmark"]

[[bin]]
name = "kd_vs_vp"
path = "benchmark/kd_vs_vp.rs"
required-features = ["benchmark"]

[features]
benchmark = ["dep:csv"]
parallel = []

[dependencies]
num-traits = "0.2"
ndarray = "0.15"
rand  = "0.8"
rand_distr = "0.4"
rayon = "1.5"
csv = { version = "1.3", optional = true }

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = true
debug = true # for flamegraph profiling only!

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
