[package]
edition = "2024"
name = "fuel"
version = "0.1.0"
authors = ["Erich Schubert <erich.schubert@tu-dortmund.de>"]
autobins = false

[lib]
name = "fuel"
path = "src/mod.rs"
test = true

[[bin]]
name = "knn"
path = "benchmark/knn.rs"
required-features = ["benchmark"]

[[bin]]
name = "lof"
path = "benchmark/lof.rs"
required-features = ["benchmark"]

[[bin]]
name = "loop"
path = "benchmark/loop.rs"
required-features = ["benchmark"]

[[bin]]
name = "dbscan"
path = "benchmark/dbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "optics"
path = "benchmark/optics.rs"
required-features = ["benchmark"]

[[bin]]
name = "hdbscan"
path = "benchmark/hdbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "baseline"
path = "benchmark/baseline.rs"
required-features = ["benchmark"]

[[bin]]
name = "agnes"
path = "benchmark/agnes.rs"
required-features = ["benchmark"]

[[bin]]
name = "single_link"
path = "benchmark/single_link.rs"
required-features = ["benchmark"]

[[bin]]
name = "geometric_linkage"
path = "benchmark/geometric_linkage.rs"
required-features = ["benchmark"]

[[bin]]
name = "index_benchmark"
path = "benchmark/index_benchmark.rs"
required-features = ["benchmark"]

[[bin]]
name = "aknn_benchmark"
path = "benchmark/aknn_benchmark.rs"
required-features = ["benchmark"]

[[bench]]
name = "math"
path = "benches/math.rs"
harness = false

[features]
default = ["parallel"]
benchmark = ["dep:csv"]
parallel = []

[dependencies]
num-traits = "0.2"
ndarray = "0.17"
ndarray-linalg = { version = "0.18", features = ["openblas-system"] }
rand = { version = "0.10", features = ["std", "std_rng", "sys_rng", "thread_rng"] }
rand_distr = "0.6"
rayon = "1.11"
rs-stats = "2.0.3"
rand_pcg = "0.10"
csv = { version = "1.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = true
debug = true # for flamegraph profiling only!

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
