[package]
edition = "2024"
name = "fuel"
version = "0.1.0"
authors = ["Erich Schubert <erich.schubert@tu-dortmund.de>"]
autobins = false

[lib]
name = "fuel"
path = "src/mod.rs"
test = true
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "knn"
path = "benchmark/knn.rs"
required-features = ["benchmark"]

[[bin]]
name = "lof"
path = "benchmark/lof.rs"
required-features = ["benchmark"]

[[bin]]
name = "loop"
path = "benchmark/loop.rs"
required-features = ["benchmark"]

[[bin]]
name = "dbscan"
path = "benchmark/dbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "optics"
path = "benchmark/optics.rs"
required-features = ["benchmark"]

[[bin]]
name = "hdbscan"
path = "benchmark/hdbscan.rs"
required-features = ["benchmark"]

[[bin]]
name = "baseline"
path = "benchmark/baseline.rs"
required-features = ["benchmark"]

[[bin]]
name = "agnes"
path = "benchmark/agnes.rs"
required-features = ["benchmark"]

[[bin]]
name = "single_link"
path = "benchmark/single_link.rs"
required-features = ["benchmark"]

[[bin]]
name = "geometric_linkage"
path = "benchmark/geometric_linkage.rs"
required-features = ["benchmark"]

[[bin]]
name = "index_benchmark"
path = "benchmark/index_benchmark.rs"
required-features = ["benchmark"]

[[bin]]
name = "aknn_benchmark"
path = "benchmark/aknn_benchmark.rs"
required-features = ["benchmark"]

[[bin]]
name = "compute_knn_outlier_scores"
path = "src/bin/compute_knn_outlier_scores.rs"
required-features = ["io"]

[[bench]]
name = "math"
path = "benches/math.rs"
harness = false

[[bench]]
name = "pairwise_sqdist"
path = "benches/pairwise_sqdist.rs"
harness = false

[features]
default = ["parallel"]
benchmark = ["dep:csv"]
parallel = []
io = ["dep:csv", "dep:qsv-sniffer", "dep:flate2", "dep:ndarray-npy"]
python = ["dep:numpy", "dep:pyo3"]

[dependencies]
num-traits = "0.2"
ndarray = "0.17"
ndarray-linalg = { version = "0.18", features = ["openblas-system"] }
rand = { version = "0.10", features = ["std", "std_rng", "sys_rng", "thread_rng"] }
rand_distr = "0.6"
rand_pcg = "0.10"
rayon = "1.12"
rs-stats = "2.0.3"
csv = { version = "1.3", optional = true }
qsv-sniffer = { version = "0.12.2", optional = true }
flate2 = { version = "1.0", optional = true }
ndarray-npy = { version = "0.10.0", optional = true }
pyo3 = { version = "0.28", optional = true, features = ["macros", "extension-module"] }
numpy = { version = "0.28", optional = true }
kmedoids = "0.5.5"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 1
lto = "thin"
codegen-units = 16
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
